# nnplayer

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
ncm-api-rs/: Cargo.toml
ncm-api-rs/src/: crypto.rs  lib.rs  request.rs
ncm-api-rs/src/api/: login.rs  login_cellphone.rs  register_cellphone.rs  user_bindingcellphone.rs  voice_upload.rs
ncm-api-rs/src/server/: mod.rs
ncm-api-rs/src/util/: device.rs  ip.rs
src/: App.vue  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/audio/: engine.rs  mod.rs  state.rs
src-tauri/src/commands/: audio.rs  auth.rs  local_music.rs  lyric.rs  mod.rs  music.rs  qq_auth.rs  qq_music.rs  user.rs  window_geom.rs
src-tauri/src/commands/shared/: mod.rs  song_mapper.rs
src/components/: LyricPanel.vue  PlayControl.vue  PlayerBar.vue  PlayerBarFloating.vue  ProgressBar.vue  QueueDrawer.vue  ScrollText.vue  Sidebar.vue  SkeletonCard.vue  SongList.vue  SongListItem.vue
src/composables/: useAudioBridge.ts  useAudioPlayer.ts  useCoverLoader.ts  useDesktopLyricsBridge.ts  useLocalCover.ts  useLyric.ts  useLyricWindowPrefs.ts  useNcmApi.ts  useQqApi.ts  useSpringScroll.ts  useTauriBridge.ts  useWindowGeometry.ts
src/router/: index.ts
src/stores/: desktopLyrics.ts  localLibrary.ts  player.ts  theme.ts  user.ts
src/types/: music.d.ts
src/utils/: colorExtractor.ts  crypto.ts  format.ts  localSong.ts  lrcParser.ts
src/views/: DailyRecommend.vue  DesktopLyrics.vue  LocalAlbum.vue  LocalArtist.vue  LocalMusic.vue  Login.vue  MyPlaylists.vue  NowPlaying.vue  PlaylistDetail.vue  Search.vue
